--- a/web/index.html
+++ b/web/index.html
@@ -69,27 +69,29 @@
                style="position: absolute; top: 0px;right: 2%; font-size: 29px; color: rgba(255,255,255,.85); z-index: 3"></i>
         </div>
         <div id="weatherInfo" class="info-div">
-            <iframe id="weatherFrame" allowtransparency="true" frameborder="0" width="410" height="98" scrolling="no" style="display: none;"
+            <iframe id="weatherFrame" allowtransparency="true" frameborder="0" width="410" height="98" scrolling="no"
+                    style="display: none;"
                     src="//tianqi.eastday.com/plugin/widget_v1.html?sc=1&z=1&t=1&v=0&d=2&bd=0&k=000000&f=&q=1&a=1&c=54511&w=410&h=98&align=center"></iframe>
         </div>
+    </ul>
+</div>
+<!-- 天气/日历悬窗 -->
+<script>
+    $("#weatherBtn").mouseover(function () {
+        $("#weatherInfo").fadeToggle(200);
+        $("#weatherFrame").fadeToggle(200);
+    });
+    $("#weatherBtn").mouseleave(function () {
+        $("#weatherInfo").fadeToggle(100);
+        $("#weatherFrame").fadeToggle(100);
+    });
+</script>
 
-        <!-- 天气/日历悬窗 -->
-        <script>
-            $("#weatherBtn").mouseover(function () {
-                $("#weatherInfo").fadeToggle(200);
-                $("#weatherFrame").fadeToggle(200);
-            });
-            $("#weatherBtn").mouseleave(function () {
-                $("#weatherInfo").fadeToggle(100);
-                $("#weatherFrame").fadeToggle(100);
-            });
-        </script>
-
-        <div id="outterPage" class="container" style="display: unset">
-            <!-- 搜索条 -->
-            <div class="input-group input-group-lg"
-                 style="width: 60%; position: absolute; left: 50%; top: 30%;transform: translate(-50%); z-index: 3;">
-                <div class="input-group input-group-lg" style="">
+<div id="outterPage" class="container" style="display: unset">
+    <!-- 搜索条 -->
+    <div class="input-group input-group-lg"
+         style="width: 60%; position: absolute; left: 50%; top: 30%;transform: translate(-50%); z-index: 3;">
+        <div class="input-group input-group-lg" style="">
         <span class="input-group-addon" style="border-bottom-width: 2px; border-right-width: 2px;">
             <table>
                 <tr>
@@ -98,156 +100,155 @@
                 </tr>
             </table>
         </span>
-                    <form id="searchForm" action="http://www.baidu.com/s?wd=+" method="get" target="_blank">
-                        <input type="text" class="form-control" name="search" id="search" style="width: 100%;"
-                               baiduSug="2" value=" "
-                               onkeydown='if(event.keyCode==13){gosubmit(document.getElementById("searchTop").innerText);}'>
-                    </form>
-                    <i id="searchBtn" class="iconfont icon-sousuo input-group-addon"
-                       style="background-color: rgba(122, 173, 226, 0.55); height: 43px;"
-                       onclick='doSearch(document.getElementById("searchTop").innerText)'></i>
-                </div>
-                <form>
-                    <div id="searchList" class="input-group input-group-lg" style="display: none; z-index: 3;">
-                        <p class="searchEngine">
-                            <input value="百度" type="button" class="searchOpts" onclick="hideList(this.value)"/>
-                        </p>
-                        <p class="searchEngine">
-                            <input value="谷歌" type="button" class="searchOpts" onclick="hideList(this.value)"/>
-                        </p>
-                        <p class="searchEngine">
-                            <input value="知乎" type="button" class="searchOpts" onclick="hideList(this.value)"/>
-                        </p>
-                        <p class="searchEngine">
-                            <input value="豆瓣" type="button" class="searchOpts" onclick="hideList(this.value)"/>
-                        </p>
-                        <p class="searchEngine">
-                            <input value="京东" type="button" class="searchOpts" onclick="hideList(this.value)"/>
-                        </p>
-                        <p class="searchEngine">
-                            <input value="淘宝" type="button" class="searchOpts" onclick="hideList(this.value)"/>
-                        </p>
-                        <p class="searchEngine" style="border-bottom-width: 2px;">
-                            <input value="网盘" type="button" class="searchOpts" onclick="hideList(this.value)"/>
-                        </p>
-                    </div>
-                </form>
+            <form id="searchForm" action="http://www.baidu.com/s?wd=+" method="get" target="_blank">
+                <input type="text" class="form-control" name="search" id="search" style="color: #2c3f51;font-size:20px; width: 100%;background-color: rgba(255, 255, 255, 0.7);"
+                       baiduSug="2" value=" "
+                       onkeydown='if(event.keyCode==13){gosubmit(document.getElementById("searchTop").innerText);}'>
+            </form>
+            <i id="searchBtn" class="iconfont icon-sousuo input-group-addon"
+               style="background-color: rgba(122, 173, 226, 0.55); height: 43px;"
+               onclick='doSearch(document.getElementById("searchTop").innerText)'></i>
+        </div>
+        <form>
+            <div id="searchList" class="input-group input-group-lg" style="display: none; z-index: 3;">
+                <p class="searchEngine">
+                    <input value="百度" type="button" class="searchOpts" onclick="hideList(this.value)"/>
+                </p>
+                <p class="searchEngine">
+                    <input value="谷歌" type="button" class="searchOpts" onclick="hideList(this.value)"/>
+                </p>
+                <p class="searchEngine">
+                    <input value="知乎" type="button" class="searchOpts" onclick="hideList(this.value)"/>
+                </p>
+                <p class="searchEngine">
+                    <input value="豆瓣" type="button" class="searchOpts" onclick="hideList(this.value)"/>
+                </p>
+                <p class="searchEngine">
+                    <input value="京东" type="button" class="searchOpts" onclick="hideList(this.value)"/>
+                </p>
+                <p class="searchEngine">
+                    <input value="淘宝" type="button" class="searchOpts" onclick="hideList(this.value)"/>
+                </p>
+                <p class="searchEngine" style="border-bottom-width: 2px;">
+                    <input value="网盘" type="button" class="searchOpts" onclick="hideList(this.value)"/>
+                </p>
             </div>
+        </form>
+    </div>
 
-            <!--
-              作者：i@zhangxingqiu.cn
-              时间：2016-10-04
-              描述：搜索框完
-          -->
+    <!--
+      作者：i@zhangxingqiu.cn
+      时间：2016-10-04
+      描述：搜索框完
+  -->
 
-            <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
 
-        </div>
-
-
-        <div class="container"
-             style="position: absolute; left: 50%; top: 66%;transform: translate(-50%, -20%); z-index: 2;">
-            <table class="table table-responsive  table-striped table-bordered table-hover acitve ">
-                <thead>
-                <tr class="center" style="background: rgba(45, 43, 43, 0.43);">
-                    <th id="dingbu" colspan="5">网站导航</th>
-                    <!--<th id="dingbu" colspan="5" >快捷服务类 </th>-->
-
-                </tr>
-                </thead>
-                <tbody style="vertical-align: middle">
-                <tr style="background: rgba(45, 43, 43, 0.43);">
-                    <td align="center" id="fenlei" style="vertical-align: middle">娱乐</td>
-                    <td align="center" style="vertical-align: middle"><a href="http://www.bilibili.com/" target="_blank"
-                                                                         id="lianjie1">B 站</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://www.zhihu.com/" target="_blank"
-                                                                         id="lianjie1">知乎</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="http://tieba.baidu.com/" target="_blank"
-                                                                         id="lianjie">百度贴吧</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="http://weibo.com/" target="_blank"
-                                                                         id="lianjie">微博</a></td>
-                </tr>
-                <tr style="background: rgba(45, 43, 43, 0.43);">
-                    <td align="center" id="fenlei" style="vertical-align: middle">购物</td>
-                    <td align="center" style="vertical-align: middle"><a href="http://www.jd.com/" target="_blank"
-                                                                         id="lianjie">京东</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://www.tmall.com/" target="_blank"
-                                                                         id="lianjie">天猫</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://www.taobao.com/" target="_blank"
-                                                                         id="lianjie">淘宝</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://www.mi.com/" target="_blank"
-                                                                         id="lianjie">小米商城</a></td>
-                </tr>
-                <tr style="background: rgba(45, 43, 43, 0.43);">
-                    <td align="center" id="fenlei" rowspan="2" style="vertical-align: middle">个人常用</td>
-                    <td align="center" style="vertical-align: middle"><a href="http://email.163.com/" target="_blank"
-                                                                         id="lianjie">网易邮箱</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://mail.google.com/" target="_blank"
-                                                                         id="lianjie">谷歌邮箱</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://github.com/nianliu9562/"
-                                                                         target="_blank" id="lianjie">GitHub</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://cloud.tencent.com/"
-                                                                         target="_blank" id="lianjie">腾讯云</a></td>
-                </tr>
-                <tr style="background: rgba(45, 43, 43, 0.43);">
-                    <td align="center" style="vertical-align: middle"><a href="https://www.3dmgame.com/" target="_blank"
-                                                                         id="lianjie">3DM</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="http://www.zimuzu.io/" target="_blank"
-                                                                         id="lianjie">人人影视</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="http://pan.baidu.com/" target="_blank"
-                                                                         id="lianjie">百度云</a></td>
-                    <td align="center" style="vertical-align: middle"><a href="https://www.aliyun.com/" target="_blank"
-                                                                         id="lianjie">阿里云</a></td>
-                </tr>
-            </table>
+</div>
 
 
-            <!--作者：i@zhangxingqiu.cn
-                       时间：2016-10-07
-                       描述：这里是根据设备尺寸选择自动隐藏的内容
-                                    -->
-            <div class="hidden-xs">
+<div class="container"
+     style="position: absolute; left: 50%; top: 66%;transform: translate(-50%, -20%); z-index: 2;">
+    <table class="table table-responsive  table-striped table-bordered table-hover acitve ">
+        <thead>
+        <tr class="center" style="background: rgba(45, 43, 43, 0.43);">
+            <th id="dingbu" colspan="5">网站导航</th>
+            <!--<th id="dingbu" colspan="5" >快捷服务类 </th>-->
 
-                <!--
-                作者：i@zhangxingqiu.cn
-                时间：2016-10-05
-                描述：北邮校园导航相关网址
-            -->
+        </tr>
+        </thead>
+        <tbody style="vertical-align: middle">
+        <tr style="background: rgba(45, 43, 43, 0.43);">
+            <td align="center" id="fenlei" style="vertical-align: middle">娱乐</td>
+            <td align="center" style="vertical-align: middle"><a href="http://www.bilibili.com/" target="_blank"
+                                                                 id="lianjie1">B 站</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://www.zhihu.com/" target="_blank"
+                                                                 id="lianjie1">知乎</a></td>
+            <td align="center" style="vertical-align: middle"><a href="http://tieba.baidu.com/" target="_blank"
+                                                                 id="lianjie">百度贴吧</a></td>
+            <td align="center" style="vertical-align: middle"><a href="http://weibo.com/" target="_blank"
+                                                                 id="lianjie">微博</a></td>
+        </tr>
+        <tr style="background: rgba(45, 43, 43, 0.43);">
+            <td align="center" id="fenlei" style="vertical-align: middle">购物</td>
+            <td align="center" style="vertical-align: middle"><a href="http://www.jd.com/" target="_blank"
+                                                                 id="lianjie">京东</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://www.tmall.com/" target="_blank"
+                                                                 id="lianjie">天猫</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://www.taobao.com/" target="_blank"
+                                                                 id="lianjie">淘宝</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://www.mi.com/" target="_blank"
+                                                                 id="lianjie">小米商城</a></td>
+        </tr>
+        <tr style="background: rgba(45, 43, 43, 0.43);">
+            <td align="center" id="fenlei" rowspan="2" style="vertical-align: middle">个人常用</td>
+            <td align="center" style="vertical-align: middle"><a href="http://email.163.com/" target="_blank"
+                                                                 id="lianjie">网易邮箱</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://mail.google.com/" target="_blank"
+                                                                 id="lianjie">谷歌邮箱</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://github.com/nianliu9562/"
+                                                                 target="_blank" id="lianjie">GitHub</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://cloud.tencent.com/"
+                                                                 target="_blank" id="lianjie">腾讯云</a></td>
+        </tr>
+        <tr style="background: rgba(45, 43, 43, 0.43);">
+            <td align="center" style="vertical-align: middle"><a href="https://www.3dmgame.com/" target="_blank"
+                                                                 id="lianjie">3DM</a></td>
+            <td align="center" style="vertical-align: middle"><a href="http://www.zimuzu.io/" target="_blank"
+                                                                 id="lianjie">人人影视</a></td>
+            <td align="center" style="vertical-align: middle"><a href="http://pan.baidu.com/" target="_blank"
+                                                                 id="lianjie">百度云</a></td>
+            <td align="center" style="vertical-align: middle"><a href="https://www.aliyun.com/" target="_blank"
+                                                                 id="lianjie">阿里云</a></td>
+        </tr>
+    </table>
 
 
-            </div>
+    <!--作者：i@zhangxingqiu.cn
+               时间：2016-10-07
+               描述：这里是根据设备尺寸选择自动隐藏的内容
+                            -->
+    <div class="hidden-xs">
+
+        <!--
+        作者：i@zhangxingqiu.cn
+        时间：2016-10-05
+        描述：北邮校园导航相关网址
+    -->
 
 
-            <table>
-                <table class="table table-striped table-bordered table-hover active">
-                    <thead>
-                    <tr class="active center">
-                    </tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    </thead>
-                </table>
-            </table>
-
-        </div>
-
-        <!--作者：i@zhangxingqiu.cn
-              时间：2016-10-03
-              描述：当前时间显示代码-->
+    </div>
 
 
-        <!--<ul class="nav nav-tabs">-->
-        <div id="footer" style="height: auto; position: fixed; bottom: 0;">
-            <center>
-                <font color="#f0f8ff">
-                    网站修改自GitHub项目<a href="https://github.com/byrwiki/byrwiki" target="_blank"
-                                    id="lianjie">byrwiki/byrwiki</a>
-                    &emsp;页面系个人使用，任何人不得用作商业用途
-                </font>
-            </center>
-        </div>
-        <!--</ul>-->
+    <table>
+        <table class="table table-striped table-bordered table-hover active">
+            <thead>
+            <tr class="active center">
+            </tr>
+            <tr></tr>
+            <tr></tr>
+            <tr></tr>
+            </thead>
+        </table>
+    </table>
+
+</div>
+
+<!--作者：i@zhangxingqiu.cn
+      时间：2016-10-03
+      描述：当前时间显示代码-->
+
+
+<!--<ul class="nav nav-tabs">-->
+<div id="footer" style="height: auto; position: fixed; bottom: 0;">
+    <center>
+        <font color="#f0f8ff">
+            网站修改自GitHub项目<a href="https://github.com/byrwiki/byrwiki" target="_blank"
+                            id="lianjie">byrwiki/byrwiki</a>
+            &emsp;页面系个人使用，任何人不得用作商业用途
+        </font>
+    </center>
+</div>
 
 </body>
 <!--
